--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
+
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
@@ -27,69 +29,72 @@
         <button>Sign up</button>
       </section>
       <img src="https://placehold.co/600x400" alt="Placeholder for an image" />
-    </main>
-    <section>
-      <h2>Some random heading</h2>
-      <ul>
-        <li>
-          <img
-            src="https://placehold.co/160x160"
-            alt="Placeholder for an image"
-          />
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit cupiditate
-            itaque commodi.
-          </p>
-        </li>
-        <li>
-          <img
-            src="https://placehold.co/160x160"
-            alt="Placeholder for an image"
-          />
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit cupiditate
-            itaque commodi.
-          </p>
-        </li>
-        <li>
-          <img
-            src="https://placehold.co/160x160"
-            alt="Placeholder for an image"
-          />
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit cupiditate
-            itaque commodi.
-          </p>
-        </li>
-        <li>
-          <img
-            src="https://placehold.co/160x160"
-            alt="Placeholder for an image"
-          />
-          <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit cupiditate
-            itaque commodi.
-          </p>
-        </li>
-      </ul>
-    </section>
-    <div>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga sequi
-        suscipit quod temporibus tempora culpa recusandae dolore harum maxime.
-        Quae facere.
-      </p>
-      <span>-Thor, God of Thunder</span>
-    </div>
-    <div>
+
+      <section>
+        <h2>Some random heading</h2>
+        <ul>
+          <li>
+            <img
+              src="https://placehold.co/160x160"
+              alt="Placeholder for an image"
+            />
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit
+              cupiditate itaque commodi.
+            </p>
+          </li>
+          <li>
+            <img
+              src="https://placehold.co/160x160"
+              alt="Placeholder for an image"
+            />
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit
+              cupiditate itaque commodi.
+            </p>
+          </li>
+          <li>
+            <img
+              src="https://placehold.co/160x160"
+              alt="Placeholder for an image"
+            />
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit
+              cupiditate itaque commodi.
+            </p>
+          </li>
+          <li>
+            <img
+              src="https://placehold.co/160x160"
+              alt="Placeholder for an image"
+            />
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit
+              cupiditate itaque commodi.
+            </p>
+          </li>
+        </ul>
+      </section>
+
       <div>
-        <section>
-          <h3>Call to action heading</h3>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-        </section>
-        <button>Sign up</button>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fuga sequi
+          suscipit quod temporibus tempora culpa recusandae dolore harum maxime.
+          Quae facere.
+        </p>
+        <span>-Thor, God of Thunder</span>
       </div>
-    </div>
+
+      <div>
+        <div>
+          <section>
+            <h3>Call to action heading</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+          </section>
+          <button>Sign up</button>
+        </div>
+      </div>
+    </main>
     <footer>Copyright © The Odin Project 2021</footer>
   </body>
 </html>
